--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/chanan-ru/oasis-client/issues"
   },
-  "homepage": "https://github.com/chanan-ru/oasis-client#readme"
+  "homepage": "https://github.com/chanan-ru/oasis-client#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
+    "process": "^0.11.10"
+  }
 }
