--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^4.8.0",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
