--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   },
   "homepage": "https://github.com/chanan-ru/oasis-client#readme",
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router": "^6.8.2",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
